--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,7 +14,7 @@
         "experience": "Experience"
     },
     "home": {
-        "title": "Hi! I'm Marcos, Tech Lead - Project Manager at Optima Retail",
+        "title": "Hi! I'm Marcos, Tech Lead at Optima Retail",
         "description": "This is the home page",
         "about-me": "Know more about Me"
     },
