--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,8 +1,94 @@
 {
-    "navbar": {
-        "home": "Homeeeee",
-        "about": "About",
-        "contact": "Contact"
+    "languages": {
+        "en": "English",
+        "es": "Spanish",
+        "fr": "French",
+        "de": "German",
+        "it": "Italian"
     },
-    "hola": "Hello"
+    "navbar": {
+        "home": "Home",
+        "about": "About",
+        "contact": "Contact",
+        "work": "Work",
+        "experience": "Experience"
+    },
+    "home": {
+        "title": "Hi! I'm Marcos, Tech Lead at Optima Retail",
+        "description": "This is the home page",
+        "about-me": "Know more about Me"
+    },
+    "experience": {
+        "title": "Experience",
+        "description": "This is the experience page",
+        "exp1": {
+            "title": "IT Project Manager - Optima Retail",
+            "timeRange": "January 2025 - Present",
+            "description": "This is the experience 1"
+
+        },
+        "exp2": {
+            "title": "Tech Lead - Optima Retail",
+            "timeRange": "September 2024 - December 2024",
+            "description": "This is the experience 2"
+        },
+        "exp3": {
+            "title": "Software Developer - Optima Retail",
+            "timeRange": "June 2023 - September 2024",
+            "description": "This is the experience 2"
+        },
+        "exp4": {
+            "title": "PHP Laravel Developer - Abalit Technologies",
+            "timeRange": "January 2023 - May 2023",
+            "description": "This is the experience 2"
+        },
+        "exp5": {
+            "title": "PHP BackEnd Developer - Klai Agency",
+            "timeRange": "October 2021 - March 2022",
+            "description": "This is the experience 2"
+        }
+    },
+    "education": {
+        "title": "Education",
+        "description": "This is the education page",
+        "ed1": {
+            "title": "Multiplatform App Development (DAM) - La Salle Gracia",
+            "timeRange": "September 2022 - May 2023",
+            "description": "This is the experience 1"
+
+        },
+        "ed2": {
+            "title": "Web App Development (DAW) - La Salle Gracia",
+            "timeRange": "September 2020 - May 2022",
+            "description": "This is the experience 1"
+
+        },
+        "ed3": {
+            "title": "Social Bachelor - IPM",
+            "timeRange": "September 2018 - June 2020",
+            "description": "This is the experience 1"
+
+        }
+    },
+    "work": {
+        "title": "Work",
+        "description": "This is the work page",
+        "work1": {
+            "title": "Partyum",
+            "description": "Partyum is coming soon ..."
+        },
+        "work2": {
+            "title": "Abalit Technologies",
+            "timeRange": "January 2023 - May 2023",
+            "description": "This is the work 2"
+        },
+        "work3": {
+            "title": "Klai Agency",
+            "timeRange": "October 2021 - March 2022",
+            "description": "This is the work 3"
+        }
+    },
+    "footer": {
+        
+    }
 }
