cambio radical de estilo

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -16,7 +16,8 @@
     "home": {
       "title": "¡Hola! Soy Marcos, Tech Lead en Optima Retail",
       "description": "Esta es la página de inicio",
-      "about-me": "Conóceme mejor"
+      "about-me": "Conóceme mejor",
+      "charge": "Project Manager / Team Lead / Tech Lead"
     },
     "experience": {
       "title": "Experiencia",
